--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -34,7 +34,7 @@ a,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url('../../assets/images/registration-img.png');
+  background: url('../../assets/images/sm/registration-img.jpg');
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
