--- a/client/src/components/Signin/Signin.css
+++ b/client/src/components/Signin/Signin.css
@@ -2,24 +2,26 @@
     position: absolute;
     left: 50%;
     top: 50%;
-    width: 35%;
     transform: translate(-50%, -50%);
-    height: 500px;
     padding-left: 20px;
     padding-right: 20px;
+    width: 100%;
 }
 
 .signin-header {
-    margin-top:70px;
     padding: 20px;
     background-color: rgba(32, 32, 29, .7);
     color: floralwhite;
+    max-width: 550px;
+    margin: 0 auto;
 }
 
 .form-container {
     background: rgba(52, 52, 52, .6);
     margin-top: -10px;
     padding: 20px;
+    max-width: 550px;
+    margin: 0 auto;
 }
 
 .signin-btn {
