--- a/client/src/containers/Signin/SigninContainer.css
+++ b/client/src/containers/Signin/SigninContainer.css
@@ -6,7 +6,7 @@ body {
     background: linear-gradient(
                      rgba(20,20,20, .8), 
                      rgba(20,20,20, .9)),
-                     url('../../assets/images/signin-background.png');
+                     url('../../assets/images/sm/sigin-back.jpg');
     height: 100vh;
     background-size: cover;
     z-index: 1000;
