--- a/client/src/containers/Signin/SigninContainer.css
+++ b/client/src/containers/Signin/SigninContainer.css
@@ -2,7 +2,7 @@ body {
   font: 100% / 1.414 "Open Sans", "Roboto", arial, sans-serif;
 }
 
-.signin-background {
+.signinBackground {
     background: linear-gradient(
                      rgba(20,20,20, .8), 
                      rgba(20,20,20, .9)),
