--- a/client/src/containers/Dashboard/Dashboard.css
+++ b/client/src/containers/Dashboard/Dashboard.css
@@ -1,10 +1,10 @@
 .leftNav {
-  background-color: red;
+  background-color: #272b33;
   height: 1000px;
 }
 
 .mainSection {
-  background-color: yellow;
+  background-color: #e9f0f5;
   height: 1000px;
 }
 
@@ -13,11 +13,11 @@
 }
 
 .dashLeftHeader {
-  background-color: green;
+  background-color: #45b4c5;
   height: 75px;
 }
 
 .dashMainHeader {
-  background-color: blue;
+  background-color: #4cc8db;
   height: 75px;
 }
