--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -1,11 +1,39 @@
 body {
-  font: 100% / 1.414 "Open Sans", "Roboto", arial, sans-serif;
+  font: 100% / 1.414 'Open Sans', 'Roboto', arial, sans-serif;
 }
 
 a,
-[type="submit"] {
-  -webkit-transition: all .25s ease-in;
-  transition: all .25s ease-in;
+[type='submit'] {
+  -webkit-transition: all 0.25s ease-in;
+  transition: all 0.25s ease-in;
+}
+
+.signupContainer {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  padding-left: 0;
+  padding-right: 0;
+  margin-right: auto;
+  margin-left: auto;
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 50rem;
+  height: 30rem;
+  border-radius: 0.1875rem;
+  -webkit-box-shadow: 0px 0.1875rem 0.4375rem rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 0.1875rem 0.4375rem rgba(0, 0, 0, 0.25);
 }
 
 .signup__overlay {
@@ -30,10 +58,10 @@ a,
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: url('../../assets/images/sm/registration-img.jpg');
   background-repeat: no-repeat;
   background-position: top center;
@@ -50,7 +78,7 @@ a,
 
 .thumbnail__logo {
   -ms-flex-item-align: start;
-      align-self: flex-start;
+  align-self: flex-start;
 }
 
 .logo__shape {
@@ -66,7 +94,7 @@ a,
 
 .thumbnail__content {
   -ms-flex-item-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 h1,
@@ -86,12 +114,12 @@ h2 {
 
 .thumbnail__links {
   -ms-flex-item-align: end;
-      align-self: flex-end;
+  align-self: flex-end;
   width: 100%;
 }
 
 .svg-inline--fa.fa-w-16 {
-  color: #DE4940;
+  color: #de4940;
   margin-right: 10px;
 }
 
@@ -104,8 +132,9 @@ h2 {
   text-align: center;
   font-size: 1.5rem;
 }
-.thumbnail__links a:focus, .thumbnail__links a:hover {
-  color: white
+.thumbnail__links a:focus,
+.thumbnail__links a:hover {
+  color: white;
 }
 
 .signup__form {
@@ -114,7 +143,7 @@ h2 {
 }
 
 label {
-  font-size: .85rem;
+  font-size: 0.85rem;
   text-transform: uppercase;
   color: #ccc;
 }
@@ -130,17 +159,17 @@ label {
   border-color: #111;
 }
 
-[type="text"] {
+[type='text'] {
   color: #111;
 }
 
-[type="password"] {
+[type='password'] {
   color: #111;
 }
 
 .btn--form {
-  padding: .5rem 2.5rem;
-  font-size: .95rem;
+  padding: 0.5rem 2.5rem;
+  font-size: 0.95rem;
   font-weight: 600;
   text-transform: uppercase;
   color: #fff;
@@ -148,12 +177,13 @@ label {
   border-radius: 2.1875rem;
   width: 100%;
 }
-.btn--form:focus, .btn--form:hover {
+.btn--form:focus,
+.btn--form:hover {
   background: #323232;
 }
 
 .signup__link {
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 600;
   text-decoration: underline;
   color: #999;
@@ -163,6 +193,7 @@ label {
   text-align: center;
   margin-top: 7px;
 }
-.signup__link:focus, .signup__link:hover {
+.signup__link:focus,
+.signup__link:hover {
   color: #787878;
 }
